--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Varela+Round&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/676982b848.js" crossorigin="anonymous"></script>
+    <title>To-Do List</title>
 </head>
 <body>
-    
+    <header>
+        <i class="fa-solid fa-list-check"></i>
+        <h1>To-Do List</h1>
+    </header>
+    <main>
+        <aside>
+            <h2>Projects</h2>
+            <div id="projects">
+                 
+            </div>
+            <div id="add-new">
+                <button id="add-new-btn">Add New Project</button>
+                <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close">&times;</span>
+                      <form id="form">
+                        <h1>Enter New Project Name</h1>
+                        <label>Title:</label>
+                        <input type="text" id="titleInput" required>
+                        <button id="submit">Submit</button>
+                      </form>
+                    </div>
+                  </div>
+            </div>
+        </aside>
+        <section>
+            <div id="tasks-header">
+                <h1>Tasks</h1>
+                <button id="add-tasks"> Add New Task </button>
+            </div>
+            <div id="tasks-list">
+                <ul id="tasks-listed">
+
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <i class="fa-brands fa-github"></i>
+        <h3>avalos-eduardo</h3>
+    </footer>
+
+    <script src="index.js" type="modules"></script>
 </body>
 </html>
